--- a/app/views/layouts/_entry_list.html.erb
+++ b/app/views/layouts/_entry_list.html.erb
@@ -1,16 +1,16 @@
-<% if @diary_entries.present? %>
-  <% @diary_entries.each do |diary_entry| %>
-    <a href="<%= diary_entry_path(diary_entry) %>">
+<% if @daily_entries.present? %>
+  <% @daily_entries.each do |daily_entry| %>
+    <a href="<%= daily_entry_path(daily_entry) %>">
       <div class="row">
         <div class="col-sm-12 entry_listing">
           <div class="row">
             <div class="col-sm-3 text-center">
-              <h1><%= diary_entry.updated_at.strftime("%d") %></h1>
-              <h4><%= diary_entry.updated_at.strftime("%b %Y") %></h4>
+              <h1><%= daily_entry.updated_at.strftime("%d") %></h1>
+              <h4><%= daily_entry.updated_at.strftime("%b %Y") %></h4>
             </div>
             <div class="col-sm-9">
-              <h4><%= truncate(diary_entry.title, length: 30, separator: ' ') %></h4>
-              <p class="grey-text"><%= truncate(diary_entry.content, length: 100, separator: ' ') %></p>
+              <h4><%= truncate(daily_entry.title, length: 30, separator: ' ') %></h4>
+              <p class="grey-text"><%= truncate(daily_entry.content, length: 100, separator: ' ') %></p>
             </div>
           </div>
         </div>
